# spark-streaming

./: .gitignore  README.md  cachchay.md  docker-compose.yml  huongdan.md  pyproject.toml  report.ipynb
.github/workflows/: deploy-book.yml
configs/kafka/: topics.json
configs/mongo/: streaming.json
docs/book/: _config.yml  _toc.yml  architecture.md  conclusion.md  intro.md  report.ipynb  task4.md  task5.md  task6.md
evidence/: discover_include_tests.json  discover_no_tests.json  docker_compose_ps.txt  docker_compose_ps_after_start.txt  docker_compose_ps_final.txt  docker_compose_up.txt  docker_info.txt  emit_configs.json  kafka_topic_commands.txt  kafka_topics_describe.txt  manual_tests.txt  mongo_metadata_sample.txt  neo4j_constraints.txt  neo4j_counts_after_second_ingest.txt  neo4j_ingest_loraplus.cypher  parse_summary.json  peft_commit.txt  pytest.txt  replay_sample_same_file.json  sample_events_by_topic.json  spark_mongo_metadata_sample.txt
evidence/full_metadata/: docker_compose_ps_after_full_metadata.txt  full_metadata_extract_summary.json  kafka_full_metadata_offsets.txt  mongo_full_metadata_count_sample.json  peft.source.metadata.full.jsonl  spark_full_metadata_checkpoint_files.txt
evidence/kafka_live/: edges_offsets.txt  metadata_offsets.txt  metadata_sample_consumed.txt  nodes_offsets.txt  peft.cpg.edges.jsonl  peft.cpg.nodes.jsonl  split_counts.json
group4/: Makefile
jobs/: mongo_streaming_available_now.py  mongo_streaming_job.py
samples/: example_module.py
scripts/: create_topics.py
src/group4_lab/: discovery.py  (+6 more)
tests/: test_parser.py
(+45 files in other folders)
